# nano-code

./: .gitignore  Dockerfile.sandbox  README.md  SANDBOX_USAGE_GUIDE.md  daytona_proxy.py  docker_1.py  pyproject.toml  备份文档
nano-code-main-2/: .coveragerc  CLAUDE.md  Dockerfile.nanocode1  LICENSE  Outputframe.py  README_agent_integration.md  daytona_proxy.py  daytona_proxy_new.py  dissertation_plan.py  dissertation_plan_with_search_requests.json  pyproject.toml  test11.py  test12.py
nano-code-main-2/.claude/plan/: matplotlib-visualization-enhancement.md
nano-code-main-2/.github/workflows/: ci.yml
nano-code-main-2/Json—test/: DataCaseStudy2024.xlsx  TEST_COMMANDS.md  multi_repo_task.json  result_1756976925.3210993.json  simple_task.json  test1.json  test_dissertation_plan.json  test_dissertation_plan_with_comm.json  test_plan.json  test_plan_with_comm.json
nano-code-main-2/daytona_management/: __init__.py  cli.py  config.py  file_transfer.py  proxy.py  sandbox_manager.py  task_executor.py  workspace_manager.py
nano-code-main-2/nanocode1/: __main__.py  constants.py  env.py  final_launch.py  prompts.py
nano-code-main-2/nanocode1/Search/: decision_runner.py
nano-code-main-2/nanocode1/agent/: artifacts.py  content_analyzer.py  execution_loop.py  non_interactive_agent.py  prompt_builder.py  reporting.py  todo_helpers.py  tracing.py
nano-code-main-2/nanocode1/agent_tool/: base.py  tools.py
nano-code-main-2/nanocode1/core/: session.py
nano-code-main-2/nanocode1/models/: __init__.py  dissertation_plan.py  (+1 more)
nano-code-main-2/tests/: test_utils_logger.py
(+37 files in other folders)
