[project]
version = "0.1.5"
name = "nanocode1"
description = "A Python Implementation of Gemini Code - Batch Mode"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitignore-parser>=0.1.12",
    "openai>=1.92.2",
    "rich>=14.0.0",
    "tiktoken>=0.9.0",
]

[project.scripts]
nanocode1 = "nanocode1.__main__:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["nanocode1/**/*.py", "README.md"]


[dependency-groups]
dev = ["pytest-asyncio>=1.0.0", "pytest>=8.4.1", "pytest-cov>=6.2.1"]
